# BrickRenderLab

./: .gitignore  CMakeLists.txt  README.md
3rdpartylib/glad/: CMakeLists.txt
3rdpartylib/glad/include/glad/: glad.h
3rdpartylib/glad/src/: glad.c
client/: CMakeLists.txt  Camera.h  Material.h  Math.h  Mesh.cpp  Mesh.h  Model.cpp  Renderer.cpp  Renderer.h  SceneDisplay.cpp  SceneDisplay.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  demo.cpp  loadShader.h  main.cpp
core/client/: CMakeLists.txt  Camera.h  DeviceResource.h  Model.h  Param.h  ParamTable.h  RenderNode.cpp  RenderNode.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
core/math/: CMakeLists.txt  GraphicsMath.h  Math.cpp  Math3d.h
deprecated/: SceneDisplay.cpp  SceneDisplay.h  demo.cpp
project_space/res/models/: megascansAsset.json
project_space/res/models/edible_fruit_ujcxeblva/: ujcxeblva.json
project_space/shaders/: fragment.glsl  vertex.glsl
project_space/shaders/default/: default.ps  default.vs
project_space/shaders/test/: test_common.glsl  test_frag.glsl  test_vertex.glsl
